# neo4j-skills

./: .gitignore  .gitmodules  .yamllint  AGENTS-SCRIPTS.md  AGENTS.md  Makefile  NEO4J.md  README.md  gemini-extension.json  pyproject.toml  requirements-dev.txt
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.config/: skill-evals.env.example
.plans/: hone.config.yml  prd-agent-cypher-authoring-skill.md  progress-agent-cypher-authoring-skill.txt  tasks-agent-cypher-authoring-skill.yml
docs/: skill-testing-first-pass-proposal.md
evals/: dataset.json
neo4j-agent-memory-skill/: SKILL.md
neo4j-aura-agent-skill/: README.md  SKILL.md  agent-config-contract-risk-analyst.json  pyproject.toml
neo4j-aura-agent-skill/references/: REFERENCE.md  authoring-guide.md
neo4j-aura-agent-skill/scripts/: fetch_schema.py  invoke_agent.py  manage_agent.py
neo4j-aura-graph-analytics-skill/: README.md  SKILL.md
neo4j-claude-code-sessions/: SKILL.md
neo4j-cli-tools-skill/: SKILL.md
neo4j-cypher-authoring-skill/: README.md  SKILL.md  VERSION
neo4j-cypher-skill/: README.md  SKILL.md
neo4j-document-import-skill/: SKILL.md
neo4j-driver-dotnet-skill/: README.md  SKILL.md
neo4j-driver-go-skill/: README.md  SKILL.md
neo4j-driver-java-skill/: README.md  SKILL.md
neo4j-driver-javascript-skill/: README.md  SKILL.md
neo4j-driver-python-skill/: README.md  SKILL.md
neo4j-driver-skill/: SKILL.md
neo4j-gds-skill/: SKILL.md
neo4j-genai-plugin-skill/: SKILL.md
neo4j-getting-started-skill/: SKILL.md
neo4j-graphql-skill/: SKILL.md
(+147 files in other folders)
